[#53] Refactor game api and allow player concession
